code cleanup using sonar qube